@@ -1,5 +1,9 @@
 yoshimi 1.5.6 M
 
+2018-2-28 Will
+* Implemented defaults for part author and copyright.
+  Normal left button loads, Ctrl + left button saves.
+
 2018-2-26 Will
 * Added missing attributions to previous commit :(
 * Optimised part compute.
